# bookmatch

./: .gitignore  CLUB_LITERARIO_PROPUESTA_FINAL.md  HOMEPAGE_REDISEÑO_PROPUESTA.md  README.md  package-lock.json  package.json
backend/: README.md  package-lock.json  package.json
bookmatch/: .gitignore  INTEGRACION_BLOCKCHAIN_COMPLETA.md  INTEGRACION_COMPLETA_BLOCKCHAIN.md
bookmatch/backend/: .env.example  package.json  server.js
bookmatch/blockchain-contracts/: AGENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFO.md  README.md
bookmatch/blockchain-contracts/contracts/: README.md  check-balance.js  hardhat.config.ts  package-lock.json  package.json
bookmatch/blockchain-contracts/frontend/: index.html  package.json  playwright.config.js  tsconfig.json  vitest.config.ts
bookmatch/blockchain-contracts/ink-contracts/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  lib.rs
bookmatch/docs/: API.md  ARCHITECTURE.md  README.md
bookmatch/frontend/: .env.example  AUDITORIA_DISEÑO_EXPLORE.md  COMO_PROBAR_BLOCKCHAIN.md  ESTADO_INTEGRACION_POLKADOT.md  FIREBASE_SETUP.md  MATCH_PAGE_IMPLEMENTADA.md  MEJORAS_IMPLEMENTADAS_EXPLORE.md  MEJORAS_RESPONSIVE_EXPLORE.md  POLKADOT_INTEGRATION.md  README.md  SUPABASE_SETUP.md  SUPABASE_SETUP.sql  config-overrides.js  package-lock.json  package.json
bookmatch/frontend/src/: App.tsx
client/: package-lock.json  package.json
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json
frontend/public/: index.html
frontend/src/: App.tsx  global.d.ts  index.css
frontend/src/components/: BottomNav.tsx  (+3 more)
(+174 files in other folders)
