[package]
name = "book_traceability"
version = "5.0.0"
edition = "2021"
authors = ["BookMatch Team"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[profile.release.package.book_traceability]
opt-level = "z"
